Error Cannot set properties of undefined

--- a/BlazorAppAriaHiddenFluentUI/Components/Pages/Home.razor
+++ b/BlazorAppAriaHiddenFluentUI/Components/Pages/Home.razor
@@ -13,14 +13,14 @@
 <hr />
 
 <h3>Error: Cannot set properties of undefined (setting 'viewportElement')</h3>
-Go to Overlay 
+Open Overlay 
 <br />
 <FluentButton IconStart="@(new Icons.Regular.Size48.Window())"
               Id="idBackCounterButton"
               @onclick="@(() => visible = true)">
 </FluentButton>
 <FluentTooltip Anchor="idBackCounterButton" Position="TooltipPosition.Bottom">
-    Go to Overlay
+    Open Overlay
 </FluentTooltip>
 
 <hr />
